--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
 </head>
 <body>
     <h1>热爱生活</h1>
-    <p>我不去想是否能够成功
-      　　既然选择了远方
-      　　便只顾风雨兼程
+    <p>我不去想是否能够成功<br/>
+      
+      　　既然选择了远方<br/>
+      　　便只顾风雨兼程<br/>
     </p>
     <p>
-      我不去想能否赢得爱情
-      　　既然钟情于玫瑰
-      　　就勇敢地吐露真诚
+      我不去想能否赢得爱情<br/>
+      　　既然钟情于玫瑰<br/>
+      　　就勇敢地吐露真诚<br/>
     </p>  
     <p>
-      我不去想身后会不会袭来寒风冷雨
-      　　既然目标是地平线
-      　　留给世界的只能是背影
+      我不去想身后会不会袭来寒风冷雨<br/>
+      　　既然目标是地平线<br/>
+      　　留给世界的只能是背影<br/>
     </p>
     <p>
-      我不去想未来是平坦还是泥泞
-      　　只要热爱生命
-      　　一切，都在意料之中
+      我不去想未来是平坦还是泥泞<br/>
+      　　只要热爱生命<br/>
+      　　一切，都在意料之中<br/>
     </p>
 </body>
 </html>
