--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>每日一首</title>
-  <link href="./index.css">
+  <link src="./index.css">
 </head>
 <body>
     <h1>热爱生活</h1>
